refactor: general code maintenance to menu API