@@ -4,9 +4,7 @@ import com.conaxgames.libraries.menu.Button;
 import com.conaxgames.libraries.menu.Menu;
 import com.cryptomorin.xseries.XMaterial;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemStack;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,11 +26,9 @@ public final class PaginatedMenu {
         private int rows = 6;
         private int maxPerPage = 45;
         private int[] contentSlots;
-        private Function<Player, List<Button>> entries = player -> Collections.emptyList();
+        private Function<Player, List<Button>> entries = player -> List.of();
         private int previousSlot = 48;
         private int nextSlot = 50;
-        private ItemStack previousIcon;
-        private ItemStack nextIcon;
         private Button filler;
         private long updateTicks = 0L;
         private Function<Player, Menu> previousMenu;
@@ -73,16 +69,6 @@ public final class PaginatedMenu {
 
         public Builder nextSlot(int nextSlot) {
             this.nextSlot = nextSlot;
-            return this;
-        }
-
-        public Builder previousIcon(ItemStack previousIcon) {
-            this.previousIcon = previousIcon;
-            return this;
-        }
-
-        public Builder nextIcon(ItemStack nextIcon) {
-            this.nextIcon = nextIcon;
             return this;
         }
 
@@ -128,37 +114,24 @@ public final class PaginatedMenu {
                 }
             }
             int perPage = slots.length;
-            ItemStack previous = previousIcon != null ? previousIcon
-                    : Button.builder(XMaterial.RED_DYE).name("&cPrevious Page").build().icon();
-            ItemStack next = nextIcon != null ? nextIcon
-                    : Button.builder(XMaterial.GREEN_DYE).name("&aNext Page").build().icon();
 
             Menu[] self = new Menu[1];
             int[] page = {0};
 
-            Function<Player, String> titleFunction = player -> {
-                int total = totalPages(entries.apply(player).size(), perPage);
-                int current = Math.min(page[0], total - 1) + 1;
-                return title + " (" + current + "/" + total + ")";
-            };
-
-            Menu.Builder builder = Menu.builder(titleFunction)
+            Menu.Builder builder = Menu.builder(player -> {
+                        int total = Math.max(1, (int) Math.ceil(entries.apply(player).size() / (double) perPage));
+                        return title + " (" + (Math.min(page[0], total - 1) + 1) + "/" + total + ")";
+                    })
                     .rows(rows)
-                    .refreshInPlace(false);
-            if (previousMenu != null) {
-                builder.previous(previousMenu);
-            }
-            if (updateTicks > 0L) {
-                builder.autoUpdate(updateTicks);
-            }
+                    .refreshInPlace(false)
+                    .previous(previousMenu)
+                    .autoUpdate(updateTicks)
+                    .fill(filler);
             globals.forEach(builder::set);
-            if (filler != null) {
-                builder.fill(filler);
-            }
 
             builder.render((player, layout) -> {
                 List<Button> all = entries.apply(player);
-                int total = totalPages(all.size(), perPage);
+                int total = Math.max(1, (int) Math.ceil(all.size() / (double) perPage));
                 page[0] = Math.max(0, Math.min(page[0], total - 1));
 
                 int start = page[0] * perPage;
@@ -167,30 +140,28 @@ public final class PaginatedMenu {
                 }
 
                 if (page[0] > 0) {
-                    layout.set(previousSlot, arrow(previous, () -> {
-                        page[0]--;
-                        self[0].open(player);
-                    }));
+                    layout.set(previousSlot, Button.builder(XMaterial.RED_DYE)
+                            .name("&cPrevious Page")
+                            .onClick((ignored, type) -> {
+                                page[0]--;
+                                self[0].open(player);
+                            })
+                            .build());
                 }
                 if (page[0] < total - 1) {
-                    layout.set(nextSlot, arrow(next, () -> {
-                        page[0]++;
-                        self[0].open(player);
-                    }));
+                    layout.set(nextSlot, Button.builder(XMaterial.GREEN_DYE)
+                            .name("&aNext Page")
+                            .onClick((ignored, type) -> {
+                                page[0]++;
+                                self[0].open(player);
+                            })
+                            .build());
                 }
             });
 
             Menu menu = builder.build();
             self[0] = menu;
             return menu;
-        }
-
-        private static Button arrow(ItemStack icon, Runnable onClick) {
-            return Button.builder(icon).onClick((player, type) -> onClick.run()).build();
-        }
-
-        private static int totalPages(int size, int perPage) {
-            return Math.max(1, (int) Math.ceil(size / (double) perPage));
         }
     }
 }
